...
            onChangeFormattedText={handleChange("formattedPhoneNumber")}
            error={errors.phoneNumber}
            touched={touched.phoneNumber}
            label="Phone Number"
          />
          <ActionButton
            label="Send Code"
            onPress={handleSubmit}
            disabled={values.phoneNumber.length === 0 || loading}
          ></ActionButton>
        </YStack>
      )}
    </Formik>
...
