...
              paddingVertical: 0,
              fontSize: 16,
              color: COLORS.text,
            }}
            textInputProps={{
              placeholderTextColor: COLORS.textMuted,
              testID: "phone-input"
            }}
            codeTextStyle={{
              color: COLORS.text,
            }}
          />
        </View>
...
