...
      <YStack padding="$5">
        <AuthCard
          title={
            authMode === "token" ? (
              "Token Authentication"
            ) : verificationId ? (
              "Verify Your Phone"
            ) : authMode === "invitation" && inviterData ? (
              <XStack gap="$2" justifyContent="center" alignItems="center">
                <Avatar circular size="$5">
                  {inviterData.profilePicUrl ? (
                    <Avatar.Image src={inviterData.profilePicUrl} />
                  ) : (
...
