...
  };

  return (
    <WizardWrapper
      onContinue={onContinue}
      continueDisabled={!formData.walkType}
      continueText="Continue"
      backText=""
    >
      <YStack gap="$4">
        <WalkTypeCard
          type="friends"
          title="Friend Walk"
          icon="people-outline"
          color="#5A67F2"
          backgroundColor="#E7E9FE"
          description="Schedule a walk with a friend"
          selected={formData.walkType === "friends"}
          onSelect={setSelectedWalkType}
...
