...
  const { userData } = useUserData();

  // Tour steps configuration
  const steps = [
    {
      id: "startWalk",
      title: "Start a Walk",
      message:
        "The Walk2Gether app supports various types of walks\nTo explore, please tap the button below. Happy walking!",
      elementRefName: "startWalkFab",
    },
    {
      id: "inviteFriends",
...
